# b3-rs

./: Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  file.bf  file.c  jitdump.s
.github/workflows/: rust.yml
benches/: brainfuck.rs  factorial.rs
examples/: brainfuck.rs  interpreter.rs  recursive.rs  tail_call.rs  tracing_jit.rs
src/: alloca_to_reg.rs  bank.rs  block.rs  block_insertion_set.rs  break_critical_edges.rs  check_special.rs  compile.rs  compute_division_magic.rs  data_section.rs  dominators.rs  effects.rs  eliminate_dead_code.rs  ensure_loop_pre_headers.rs  estimate_static_exec_counts.rs  fix_ssa.rs  fold_path_constants.rs  generate.rs  hoist_loop_invariant_values.rs  infer_switches.rs  insertion_set.rs  kind.rs  legalize_memory_offsets.rs  lib.rs  liveness.rs  loop_analysis.rs  lower_macros.rs  lower_to_air.rs  main.rs  move_constants.rs  natural_loops.rs  opcode.rs  patchpoint_special.rs  patchpoint_value.rs  phi_children.rs  procedure.rs  pure_cse.rs  reduce_strength.rs  rpo.rs  sccp.rs  sparse_collection.rs  (+12 more)
src/air/: allocate_registers_and_stack_by_linear_scan.rs  allocate_registers_by_graph_coloring.rs  allocate_stack_by_graph_coloring.rs  arg.rs  basic_block.rs  block_order.rs  ccall_special.rs  ccalling_convention.rs  code.rs  custom.rs  eliminate_dead_code.rs  emit_shuffle.rs  fix_obvious_spills.rs  fix_spills_after_terminals.rs  form_table.rs  generate.rs  generation_context.rs  handle_callee_saves.rs  helpers.rs  insertion_set.rs  inst.rs  kind.rs  liveness_adapter.rs  lower_after_regalloc.rs  lower_entry_switch.rs  lower_macros.rs  lower_stack_args.rs  lsra.rs  mod.rs  opcode.opcodes  opcode_generator.rb  pad_interference.rs  reg_liveness.rs  report_used_registers.rs  rpo.rs  simplify_cfg.rs  special.rs  stack_allocation.rs  stack_slot.rs  tmp.rs  (+4 more)
src/air/graph_coloring/: mod.rs
src/analysis/: dominators.rs  liveness.rs  loop_analysis.rs  mod.rs  natural_loops.rs  phi_children.rs  use_counts.rs  variable_liveness.rs
src/jit/: ccall_helpers.rs  compilation.rs  mod.rs  reg.rs  register_at_offset.rs  register_set.rs
src/loop_unrolling/: lstgraph.rs  lstnode.rs  mod.rs
src/module/: mod.rs
src/utils/: bitmap.rs  bitvector.rs  deque.rs  index_set.rs  insertion.rs  interference_graph.rs  likely_dense_integer_set.rs  mod.rs  phase_scope.rs
