[package]
name = "b3"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
[dependencies]
tinyvec = { version = "1.6", features = ["alloc"] }
num-traits = "0.2"
num-integer = "0.1"
macroassembler = { git = "https://github.com/playxe/masm-rs" }
once_cell = "1.8"
paste = "1.0"
indexmap = "1.9"
unwind = "0.4"
libc = "0.2"
cfg-if = "1.0"


[features]

[dev-dependencies]
criterion = "0.4"
target-lexicon = "0.12"
cranelift = "0.95"
cranelift-module = "0.95"
cranelift-jit = "0.95"
pico-args = "0.5"
mimalloc = "0.1"
r7rs-parser = { git = "https://github.com/playxe/r7rs-parser" }
[[bench]]
name = "brainfuck"
harness = false

[[bench]]
name = "factorial"
harness = false

