[package]
name = "b3"
version = "0.1.2"
edition = "2021"
license = "BSD-2-Clause"
repository = "https://github.com/playxe/b3-rs"
readme = "README.md"
description = "A Rust port of B3 WebKit codegen backend"
keywords = ["jit", "compiler", "codegen", "llvm"]
authors = ["Adel Prokurov <adel.prokurov@gmail.com>"]
categories = ["compilers"]

[dependencies]
tinyvec = { version = "1.6", features = ["alloc"] }
num-traits = "0.2"
num-integer = "0.1"
macroassembler =  "0.1"
once_cell = "1.8"
paste = "1.0"
indexmap = "2.0"
libc = "0.2"
cfg-if = "1.0"
cool-bitvector = "0.1.1"

[features]

[dev-dependencies]
criterion = "0.5"
target-lexicon = "0.12"
cranelift = "0.95"
cranelift-module = "0.95"
cranelift-jit = "0.95"
pico-args = "0.5"
mimalloc = "0.1"
r7rs-parser = { git = "https://github.com/playxe/r7rs-parser" }
[[bench]]
name = "brainfuck"
harness = false

[[bench]]
name = "factorial"
harness = false

